Add Ingress to CRD to pass verify-generated test

--- a/config/crd/bases/externaldns.olm.openshift.io_externaldnses.yaml
+++ b/config/crd/bases/externaldns.olm.openshift.io_externaldnses.yaml
@@ -372,6 +372,7 @@ spec:
                     - OpenShiftRoute
                     - Service
                     - CRD
+                    - Ingress
                     type: string
                 required:
                 - type
@@ -838,6 +839,7 @@ spec:
                     - OpenShiftRoute
                     - Service
                     - CRD
+                    - Ingress
                     type: string
                 required:
                 - type
